--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "react-scripts": "1.1.4"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "cors": "^2.8.4",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
